# humanoid-amp-ppo

./: .gitignore  .gitmodules  DEBUG.md  MUJOCO_LOG.TXT  README.md  REWARD.md  pyproject.toml  train_dualarm_from_locomotion.py  transfer_locomotion_to_dualarm.py
dataset/dualarm/: dual_arm1.npy  dual_arm2.npy
dataset/grasp/: grasp1.npy  grasp2.npy
dataset/grasp_motion/: dataset2_g1_qpos.npy  dataset_g1_qpos.npy
dataset/locomotion/: locomotion1.npy  locomotion2.npy
dataset/old/: dataset.npz  dataset2.npz  dataset2_g1_qpos.csv  dataset_g1_qpos.csv  human_push_1.npy  human_push_2.npy
models/: dualarm_from_locomotion.pt
rsl_rl/: pyproject.toml
rsl_rl/algorithms/: __init__.py  amp_ppo.py  ppo.py
rsl_rl/docs/: conf.py
rsl_rl/docs/guide/: overview.rst
rsl_rl/env/: vec_env.py  vec_env_.py
rsl_rl/modules/: __init__.py  discriminator_multi.py
rsl_rl/rsl_rl/algorithms/: __init__.py  amp_ppo.py
rsl_rl/rsl_rl/modules/: __init__.py  discriminator_multi.py
rsl_rl/rsl_rl/runners/: __init__.py  amp_on_policy_runner.py
rsl_rl/rsl_rl/storage/: __init__.py
rsl_rl/rsl_rl/utils/: __init__.py  motion_loader_g1.py  pose3d.py
rsl_rl/runners/: __init__.py  amp_on_policy_runner.py  amp_on_policy_runner_old.py
rsl_rl/storage/: __init__.py  replay_buffer_multi.py  rollout_storage.py
rsl_rl/utils/: __init__.py  motion_loader_g1.py  motion_util.py  utils.py
scripts/: egl_shim.py  eval_posture_stats.py  render_motion_prior.py  render_motion_prior.sbatch  render_video.sbatch  render_warp_video.py  smoke_dualarm_env.py  train_dualarm.sbatch  train_dualarm_seeded.sbatch  vis_markers.py
src/mjlab_g1/: __init__.py  _runtime_compat.py
src/mjlab_g1/assets/: __init__.py  g1_constants.py  toaster_constants.py
src/mjlab_g1/assets/Toaster003/: model.xml
src/mjlab_g1/assets/g1/: g1.xml  g1_29dof_realsense.xml  g1_realsense.xml
src/mjlab_g1/envs/: __init__.py  amp_observations.py  g1_dualarm_rl_env.py  g1_locomotion_rl_env.py
src/mjlab_g1/perception/: __init__.py
src/mjlab_g1/perception/encoders/: __init__.py  defm_encoder.py
src/mjlab_g1/rl/: __init__.py  config.py  exporter_utils.py  residual_base_policy.py  vecenv_wrapper.py
src/mjlab_g1/scripts/: play.py  render_video.py  train.py
src/mjlab_g1/tasks/: __init__.py  common_events.py  registry.py
src/mjlab_g1/tasks/locomotion/: __init__.py  (+1 more)
src/mjlab_g1/test/: view_g1_toaster_init.py  view_qpos_29dof.py  view_qpos_motion.py
src/mjlab_husky/: __init__.py
src/mjlab_husky/envs/: __init__.py  g1_wb_grasp_rl_env.py
src/mjlab_husky/rl/: __init__.py  config.py  exporter_utils.py  vecenv_wrapper.py  vecenv_wrapper_wb.py
src/mjlab_husky/scripts/: play.py  train.py
src/mjlab_husky/tasks/: registry.py
src/mjlab_husky/test/: view_qpos_29dof.py  view_qpos_motion.py
test/: play_dataset.py
test_scene/: camera_sm.sh  mjlab_scene.xml  sim.py  sim.sh
(+34 files in other folders)
