[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab_g1"
version = "0.1.0"
license = "Apache-2.0"
description = "Humanoid AMP-PPO"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mjlab",
    "onnxruntime",
    "pybullet",
    "rsl-rl-lib",
    "pynput",
    "scipy",
    # Needed by the dual-arm DeFM depth encoder.
    "defm",
]

[project.entry-points."mjlab.tasks"]
mjlab_g1 = "mjlab_g1.tasks"

[project.scripts]
train = "mjlab_g1.scripts.train:main"
play = "mjlab_g1.scripts.play:main"

[tool.ruff]
src = ["src"]  # Helpful for recognizing first-party imports.
indent-width = 4

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab.git", rev = "v1.4.0" }
rsl-rl-lib = { path = "rsl_rl", editable = true }
# Needed by the dual-arm DeFM depth encoder.
defm = { path = "third_party/defm", editable = true }

# Needed by the dual-arm DeFM depth encoder.
# Override third_party/defm metadata because upstream pins numpy<2.0.0,
# which conflicts with MJLab 1.4 / ONNX dependencies on Python 3.13.
[[tool.uv.dependency-metadata]]
name = "defm"
version = "1.0.1"
requires-python = ">=3.8"
requires-dist = [
    "huggingface-hub>=0.36.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "scikit-learn>=1.3.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]
